# jewelry-on-hand-image-generation

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
reference/: 2026-07-16-QY042-QY069三图生成回填报告.md  2026-07-16-每周四上新双图执行报告.md  2026-07-17-QY070-手串参考图试生成实施计划.md  2026-07-17-QY070-手串参考图试生成方案.md  codex-skill-installation.md  feishu-reference-source.md  manual-workflow.md  product-analysis-schema.md  product-fidelity-constraints-schema.md  product-hero-workflow.md  prompt-template.md  qc-checklist.md  reduced-input-ablation-20260715-234819.md  reference-selection-diversity-design.md  review-decision-schema.md  task-9-cli-e2e-implementation-plan.md
scripts/: install_codex_skills.py
tests/: test_build_v6_qc_contact_sheets.py  test_category_policies.py  test_cli.py  test_display_modes.py  test_feishu_enrichment_cli.py  test_feishu_reference_source.py  test_final_necklace_important_fixes.py  test_generation.py  test_generation_helper_utf8.py  test_models.py  test_output_role_compatibility.py  test_package_import.py  test_prepare_v6_watermark_queue.py  test_product_analysis.py  test_product_fidelity_v2.py  test_product_hero_generation_contract.py  test_product_hero_reference_review.py  test_product_hero_skill_portability.py  test_product_hero_workflow.py  test_product_types.py  test_prompt_builder.py  test_qc.py  test_qc_review.py  test_random_v6_decisions.py  test_reference_catalog.py  test_reference_composition.py  test_reference_selection.py  test_review_decision.py  test_review_package.py  test_ring_attributes.py  test_run_paths.py  test_scoring.py  (+5 more)
(+173 files in other folders)
